# browserforge

./: .gitignore  Makefile  README.md  docconvert_config.json  pyproject.toml
browserforge/: __main__.py  bayesian_network.py  cli.py  download.py
browserforge/fingerprints/: __init__.py  generator.py
browserforge/headers/: __init__.py  generator.py  utils.py
browserforge/injectors/: __init__.py  mitm.py  utils.py
browserforge/injectors/data/: __init__.py  utils.js.xz
browserforge/injectors/playwright/: __init__.py  async_api.py  injector.py  sync_api.py  utils.py
browserforge/injectors/pyppeteer/: __init__.py  injector.py
browserforge/injectors/undetected_playwright/: __init__.py  injector.py
