[tool.poetry]
name = "browserforge"
version = "1.2.1"
description = "Intelligent browser header & fingerprint generator"
authors = ["daijro <daijro.dev@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/daijro/browserforge"
keywords = [
    "client",
    "headers",
    "fingerprint",
    "generator",
    "browser",
    "http",
    "scraping",
    "requests",
    "playwright",
]
classifiers = [
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
click = "*"
orjson = {version = "*", optional = true}
typing_extensions = {version = "*", python = "<3.10"}
playwright = {version = "^1.49.1", optional = true}

[tool.poetry.extras]
all = ["orjson","playwright"]
playwright = ["playwright"]

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
isort = "5.13.2"
docconvert = "2.2.0"
docformatter = "1.7.5"
mypy = "1.13.0"
flake8 = "7.1.1"

[tool.poetry.group.doc.dependencies]
requests = "2.32.3"

[tool.poetry.group.test.dependencies]
pytest = "8.3.4"
pytest-playwright = "0.6.2"

[tool.docformatter]
recursive = true
wrap-summaries = 120
blank = false

[tool.black]
line-length = 120
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"